[package]
authors = ['Litentry Dev']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://litentry.com'
license = 'Unlicense'
name = 'litentry-pallet-primitive'
repository = 'https://github.com/litentry/litentry-pallets'
version = '0.0.1'
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies.codec]
default-features = false
package = "parity-scale-codec"
features = ["derive"]
version = "1.3.0"

[dependencies.sp-core]
default-features = false
package = "sp-core"
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.sp-runtime]
default-features = false
package = "sp-runtime"
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.rstd]
default-features = false
package = "sp-std"
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.xcm]
default-features = false
package = "xcm"
git = "https://github.com/paritytech/polkadot.git"
branch = "master"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0.101"

[features]
default = ["std"]
std = [
    "codec/std",
    "rstd/std",
    "serde",
    "sp-core/std",
    "sp-runtime/std",
]