[package]
authors = ['Litentry Dev']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://litentry.com'
license = 'Unlicense'
name = 'pallet-account-linker'
repository = 'https://github.com/litentry/litentry-account-linker'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-benchmarking = {default-features = false, version = '3.0.0', optional = true, git = "https://github.com/paritytech/substrate.git", branch = "master"}
frame-support = {default-features = false, version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "master"}
frame-system = {default-features = false, version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "master"}
ripemd160 = {default-features = false, version = "0.9.1"}
sha2 = {default-features = false, version = "0.9.2"}
sp-core = {default-features = false, version = '3.0.0', optional = true, git = "https://github.com/paritytech/substrate.git", branch = "master"}
sp-io = {default-features = false, version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "master"}
sp-runtime = {default-features = false, version = '3.0.0', optional = true, git = "https://github.com/paritytech/substrate.git", branch = "master"}
sp-std = {default-features = false, version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "master"}

[dev-dependencies]
bitcoin = {version = "0.25.2", features = ["rand"]}
frame-benchmarking = {version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "master"}
hex = "0.4.2"
parity-crypto = {version = "0.8.0", features = ["publickey"]}
serde = {version = "1.0.119"}
sp-core = {default-features = false, version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "master"}
sp-runtime = {default-features = false, version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "master"}

[features]
default = ['std']
runtime-benchmarks = ["sp-runtime", "frame-benchmarking", "sp-core"]
std = [
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  "sp-io/std",
  "sp-std/std",
  "sha2/std",
  "ripemd160/std",
  "frame-benchmarking/std",
]
