[package]
authors = ["Litentry Dev"]
description = "FRAME identity management pallet"
edition = "2018"
license = 'Unlicense'
homepage = 'https://litentry.com'
repository = 'https://github.com/litentry/litentry-pallets'
name = "pallet-identity"
version = "0.0.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
enumflags2 = { version = "0.6.2" }
frame-benchmarking = {default-features = false, version = '3.0.0', optional = true }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
serde = { version = "1.0.101", optional = true }
sp-io = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0', optional = true }
sp-core = { default-features = false,  version = '3.0.0', optional = false }

[dev-dependencies]
sp-core = { version = '3.0.0' }
pallet-balances = { version = '3.0.0' }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
]
runtime-benchmarks = ["frame-benchmarking"]
