[package]
authors = ['Litentry Dev']
description = 'dynamic implementation for transaction payment pallet'
edition = '2018'
homepage = 'https://litentry.com'
license = 'Unlicense'
name = 'pallet-transaction-payment-interface'
repository = 'https://github.com/litentry/litentry-pallets'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
serde = { version = "1.0.126", optional = true, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }

pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }


[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-authorship/std",
	"pallet-balances/std",
]