[package]
authors = ['Litentry Dev']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://litentry.com'
license = 'Unlicense'
name = 'litentry-pallet-xrecovery-server'
repository = 'https://github.com/litentry/litentry-account-linker'
version = '0.0.1'
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
enumflags2 = { version = "0.6.2" }
sp-std = { version = "3.0.0", branch = "rococo-v1", default-features = false }
sp-io = { version = "3.0.0", branch = "rococo-v1", default-features = false }
sp-runtime = { version = "3.0.0", branch = "rococo-v1", default-features = false, optional = true }
frame-support = { version = "3.0.0", branch = "rococo-v1", default-features = false }
frame-system = { version = "3.0.0", branch = "rococo-v1", default-features = false }
frame-benchmarking = {version = '3.0.0', branch = "rococo-v1", default-features = false, optional = true }
sp-core = { version = "3.0.0", branch = "rococo-v1", default-features = false, optional = true }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1", default-features = false }

litentry-pallet-primitives = {path = "../../primitives"}
cumulus-primitives-core = {git = "https://github.com/paritytech/cumulus", branch = "rococo-v1", default-features = false }

[dev-dependencies]
sp-core = { version = "3.0.0" }
pallet-balances = { version = "3.0.0" }
frame-benchmarking = {version = '3.0.0' }
sp-runtime = { version = "3.0.0" }
# xcm-simulator = { git = "https://github.com/litentry/xcm-simulator", branch = "litentry" }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", version = "0.4.1-dev" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", version = "0.4.1-dev" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"xcm/std",
	"cumulus-primitives-core/std",
]
runtime-benchmarks = ["sp-runtime", "frame-benchmarking", "sp-core"]

